--- a/Sprint2/Sprint0.csproj
+++ b/Sprint2/Sprint0.csproj
@@ -15,6 +15,9 @@
     <None Remove="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeReviews\Chloe_Sprint3_ReadabilityCodeReview.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Icon.ico">
       <LogicalName>Icon.ico</LogicalName>
     </EmbeddedResource>
