--- a/Sprint2/Sprint0.csproj
+++ b/Sprint2/Sprint0.csproj
@@ -11,11 +11,9 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="CodeReviews\Anushka_Sprint4_ReadabilityCodeReview.txt" />
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CodeReviews\Anushka_Sprint4_ReadabilityCodeReview.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico">
