Did some refactoring based of Warnings and Messages and refactored some fields of Classes I worked on.

--- a/Sprint2/Sprint0.csproj
+++ b/Sprint2/Sprint0.csproj
@@ -11,6 +11,9 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="GameObjects\LoadRoomBlock.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="CodeReviews\Anushka_Sprint4_ReadabilityCodeReview.txt" />
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
